apps/base/media/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName jackett-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
          image: lscr.io/linuxserver/jackett:latest@sha256:3226a597c6a69b072e9d6b5af74a9fa425a5f979c74afe3e545d9890ab0406a1
          imagePullPolicy: IfNotPresent
          name: jackett
          ports:
            - containerPort: 9117
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: jackett/config
            - mountPath: /downloads
              name: downloads-volume
              subPath: jellyfin/downloads
      hostname: jackett
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: downloads-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: /mnt/mopower/swarm-data
