apps/base/media/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
spec:
  selector:
    app: jackett-deployment
  ports:
  - name: http
    port: 9117
    targetPort: 9117
    protocol: TCP
