apps/base/media/jackett/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jackett.local.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-forward-auth
          namespace: network-system
      services:
        - name: jackett-service
          port: 9117
  tls:
    certResolver: letsencrypt
